--- a/GameClient/GameClient.vcxproj.filters
+++ b/GameClient/GameClient.vcxproj.filters
@@ -109,6 +109,9 @@
     <Filter Include="03. Game\05. Object\Background">
       <UniqueIdentifier>{f14d6a8f-f4f0-40f2-9514-3a00dfdaa246}</UniqueIdentifier>
     </Filter>
+    <Filter Include="03. Game\03. Manager\Camera">
+      <UniqueIdentifier>{df97933d-b7b0-4c86-a0f5-a4eb85598d5d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -216,6 +219,9 @@
     <ClInclude Include="CBackground.h">
       <Filter>03. Game\05. Object\Background</Filter>
     </ClInclude>
+    <ClInclude Include="CCamera.h">
+      <Filter>03. Game\03. Manager\Camera</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -301,6 +307,9 @@
     </ClCompile>
     <ClCompile Include="CBackground.cpp">
       <Filter>03. Game\05. Object\Background</Filter>
+    </ClCompile>
+    <ClCompile Include="CCamera.cpp">
+      <Filter>03. Game\03. Manager\Camera</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
