--- a/GameClient/GameClient.vcxproj.filters
+++ b/GameClient/GameClient.vcxproj.filters
@@ -112,6 +112,9 @@
     <Filter Include="03. Game\03. Manager\Camera">
       <UniqueIdentifier>{df97933d-b7b0-4c86-a0f5-a4eb85598d5d}</UniqueIdentifier>
     </Filter>
+    <Filter Include="03. Game\03. Manager\TaskMgr">
+      <UniqueIdentifier>{0f522dc9-bdaa-4ee8-bd8e-535c52058089}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -222,6 +225,9 @@
     <ClInclude Include="CCamera.h">
       <Filter>03. Game\03. Manager\Camera</Filter>
     </ClInclude>
+    <ClInclude Include="CTaskMgr.h">
+      <Filter>03. Game\03. Manager\TaskMgr</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -310,6 +316,9 @@
     </ClCompile>
     <ClCompile Include="CCamera.cpp">
       <Filter>03. Game\03. Manager\Camera</Filter>
+    </ClCompile>
+    <ClCompile Include="CTaskMgr.cpp">
+      <Filter>03. Game\03. Manager\TaskMgr</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
