1. UI의 기능 구체화 - 부모 / 자식 UI를 가질 수 있도록
2. Edit Animation Dialog 디자인

--- a/GameClient/GameClient.vcxproj.filters
+++ b/GameClient/GameClient.vcxproj.filters
@@ -375,5 +375,8 @@
     <Image Include="GameClient.ico">
       <Filter>01. 리소스 파일</Filter>
     </Image>
+    <Image Include="icon1.ico">
+      <Filter>01. 리소스 파일</Filter>
+    </Image>
   </ItemGroup>
 </Project>
