--- a/GameClient/GameClient.vcxproj
+++ b/GameClient/GameClient.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="CKeyMgr.h" />
     <ClInclude Include="CLevel.h" />
     <ClInclude Include="CLevelMgr.h" />
+    <ClInclude Include="CLevel_Editor.h" />
     <ClInclude Include="CLevel_Game.h" />
     <ClInclude Include="CLevel_Stage01.h" />
     <ClInclude Include="CObject.h" />
@@ -197,6 +198,7 @@
     <ClCompile Include="CKeyMgr.cpp" />
     <ClCompile Include="CLevel.cpp" />
     <ClCompile Include="CLevelMgr.cpp" />
+    <ClCompile Include="CLevel_Editor.cpp" />
     <ClCompile Include="CLevel_Game.cpp" />
     <ClCompile Include="CLevel_Stage01.cpp" />
     <ClCompile Include="CObject.cpp" />
