--- a/GameClient/GameClient.vcxproj
+++ b/GameClient/GameClient.vcxproj
@@ -145,11 +145,13 @@
     <ClInclude Include="CCollider.h" />
     <ClInclude Include="CCollisionMgr.h" />
     <ClInclude Include="CComponent.h" />
+    <ClInclude Include="CDamageState.h" />
     <ClInclude Include="CDbgRenderMgr.h" />
     <ClInclude Include="CEngine.h" />
     <ClInclude Include="CEntity.h" />
     <ClInclude Include="CFSM.h" />
     <ClInclude Include="CJelly.h" />
+    <ClInclude Include="CJumpState.h" />
     <ClInclude Include="CKeyMgr.h" />
     <ClInclude Include="CLevel.h" />
     <ClInclude Include="CLevelMgr.h" />
@@ -162,7 +164,9 @@
     <ClInclude Include="CPlatform.h" />
     <ClInclude Include="CPlayer.h" />
     <ClInclude Include="CRigidBody.h" />
+    <ClInclude Include="CRunState.h" />
     <ClInclude Include="CSelectObj.h" />
+    <ClInclude Include="CSlideState.h" />
     <ClInclude Include="CSound.h" />
     <ClInclude Include="CStage.h" />
     <ClInclude Include="CState.h" />
@@ -190,11 +194,13 @@
     <ClCompile Include="CCollider.cpp" />
     <ClCompile Include="CCollisionMgr.cpp" />
     <ClCompile Include="CComponent.cpp" />
+    <ClCompile Include="CDamageState.cpp" />
     <ClCompile Include="CDbgRenderMgr.cpp" />
     <ClCompile Include="CEngine.cpp" />
     <ClCompile Include="CEntity.cpp" />
     <ClCompile Include="CFSM.cpp" />
     <ClCompile Include="CJelly.cpp" />
+    <ClCompile Include="CJumpState.cpp" />
     <ClCompile Include="CKeyMgr.cpp" />
     <ClCompile Include="CLevel.cpp" />
     <ClCompile Include="CLevelMgr.cpp" />
@@ -207,7 +213,9 @@
     <ClCompile Include="CPlatform.cpp" />
     <ClCompile Include="CPlayer.cpp" />
     <ClCompile Include="CRigidBody.cpp" />
+    <ClCompile Include="CRunState.cpp" />
     <ClCompile Include="CSelectObj.cpp" />
+    <ClCompile Include="CSlideState.cpp" />
     <ClCompile Include="CSound.cpp" />
     <ClCompile Include="CStage.cpp" />
     <ClCompile Include="CState.cpp" />
