1. Texture 이미지 불러오기 + 불러온 이미지 리스트에 추가 + 현재 선택한 이미지 Key값 세팅 완료
2. Editor Level에 카메라 이동 기능 추가 완료

--- a/GameClient/GameClient.vcxproj
+++ b/GameClient/GameClient.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{469404ec-fa0a-4451-81c2-7ce02db2cb9f}</ProjectGuid>
     <RootNamespace>GameClient</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>GameClient</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
