1. 상당히 더러운.... 현재 Texture Direct Draw 했을 때 Dialog에 표출되도록 -> 투명하게 수정할 수 있을지?

--- a/GameClient/GameClient.vcxproj
+++ b/GameClient/GameClient.vcxproj
@@ -152,6 +152,7 @@
     <ClInclude Include="CEngine.h" />
     <ClInclude Include="CEntity.h" />
     <ClInclude Include="CFSM.h" />
+    <ClInclude Include="CHandleMgr.h" />
     <ClInclude Include="CInvState.h" />
     <ClInclude Include="CJelly.h" />
     <ClInclude Include="CJumpState.h" />
@@ -204,6 +205,7 @@
     <ClCompile Include="CEngine.cpp" />
     <ClCompile Include="CEntity.cpp" />
     <ClCompile Include="CFSM.cpp" />
+    <ClCompile Include="CHandleMgr.cpp" />
     <ClCompile Include="CInvState.cpp" />
     <ClCompile Include="CJelly.cpp" />
     <ClCompile Include="CJumpState.cpp" />
