1. Path 변경에 따른 오류 수정 2. State별 Aniamtion Load 시점 변경 -> Set 함수 생성 3. Stage Edit Dialog 생성 중...

--- a/GameClient/GameClient.vcxproj
+++ b/GameClient/GameClient.vcxproj
@@ -140,6 +140,7 @@
     <ClInclude Include="CAnimation.h" />
     <ClInclude Include="CAnimator.h" />
     <ClInclude Include="CAsset.h" />
+    <ClInclude Include="CDoubleJumpState.h" />
     <ClInclude Include="CPlayerState.h" />
     <ClInclude Include="CResourceMgr.h" />
     <ClInclude Include="CBackground.h" />
@@ -194,6 +195,7 @@
     <ClCompile Include="CAnimation.cpp" />
     <ClCompile Include="CAnimator.cpp" />
     <ClCompile Include="CAsset.cpp" />
+    <ClCompile Include="CDoubleJumpState.cpp" />
     <ClCompile Include="CPlayerState.cpp" />
     <ClCompile Include="CResourceMgr.cpp" />
     <ClCompile Include="CBackground.cpp" />
