--- a/GameClient/GameClient.vcxproj.filters
+++ b/GameClient/GameClient.vcxproj.filters
@@ -294,6 +294,9 @@
     <ClInclude Include="CPlayerState.h">
       <Filter>03. Game\09. Module\State</Filter>
     </ClInclude>
+    <ClInclude Include="CDoubleJumpState.h">
+      <Filter>03. Game\09. Module\State\PlayerState</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -430,6 +433,9 @@
     </ClCompile>
     <ClCompile Include="CPlayerState.cpp">
       <Filter>03. Game\09. Module\State</Filter>
+    </ClCompile>
+    <ClCompile Include="CDoubleJumpState.cpp">
+      <Filter>03. Game\09. Module\State\PlayerState</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
